trunk/Archive2/58/5c5274e52b62ca/output
main.cpp:93:17: error: prototype for 'ListElement<T>* LinkedList<T>::right_sibling(const T&) const' does not match any in class 'LinkedList<T>'
 ListElement<T>* LinkedList<T>::right_sibling(T const& datum) const
                 ^
main.cpp:36:10: error: candidate is: void LinkedList<T>::right_sibling(const T&) const
     void right_sibling(T const&) const;
          ^
main.cpp:105:17: error: prototype for 'ListElement<T>* LinkedList<T>::left_sibling(const T&) const' does not match any in class 'LinkedList<T>'
 ListElement<T>* LinkedList<T>::left_sibling(T const& datum) const
                 ^
main.cpp:35:10: error: candidate is: void LinkedList<T>::left_sibling(const T&) const
     void left_sibling(T const&) const;
          ^
